--- a/README
+++ b/README
@@ -6,4 +6,13 @@
 # metabolism
 https://en.wikipedia.org/wiki/Metabolism
 
+# assortiment
+https://nl.wikipedia.org/wiki/Assortiment
+
+# paul janssen
+https://en.wikipedia.org/wiki/Paul_Janssen
+
+# isoleercel
+https://nl.wikipedia.org/wiki/Isoleercel
+
 doctor nekschot in action ® 2002-2022
