--- a/README
+++ b/README
@@ -15,4 +15,4 @@ https://en.wikipedia.org/wiki/Paul_Janssen
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
 
-doctor nekschot in action ® 2002-2022
+doctor nekschot in action
