--- a/README
+++ b/README
@@ -18,4 +18,7 @@ https://en.wikipedia.org/wiki/Paul_Janssen
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
 
+# prinsenland
+https://nl.wikipedia.org/wiki/Prinsenland
+
 doctor nekschot in action
