--- a/README
+++ b/README
@@ -9,6 +9,9 @@ https://en.wikipedia.org/wiki/Metabolism
 # poisening
 https://en.wikipedia.org/wiki/Poisoning
 
+# cav1.3
+https://en.wikipedia.org/wiki/Cav1.3
+
 # assortiment
 https://nl.wikipedia.org/wiki/Assortiment
 
@@ -17,6 +20,9 @@ https://en.wikipedia.org/wiki/Paul_Janssen
 
 # isoleercel
 https://nl.wikipedia.org/wiki/Isoleercel
+
+# catatonia
+https://en.wikipedia.org/wiki/Catatonia
 
 # prinsenland
 https://nl.wikipedia.org/wiki/Prinsenland
