--- a/README
+++ b/README
@@ -3,6 +3,9 @@
 ---------------
 
 
+# psychiatrist
+https://en.wikipedia.org/wiki/Psychiatrist
+
 # metabolism
 https://en.wikipedia.org/wiki/Metabolism
 
