--- a/README
+++ b/README
@@ -6,6 +6,12 @@
 # psychiatrist
 https://en.wikipedia.org/wiki/Psychiatrist
 
+# assortiment
+https://nl.wikipedia.org/wiki/Assortiment
+
+# paul janssen
+https://en.wikipedia.org/wiki/Paul_Janssen
+
 # metabolism
 https://en.wikipedia.org/wiki/Metabolism
 
