--- a/README
+++ b/README
@@ -12,6 +12,24 @@ https://nl.wikipedia.org/wiki/Assortiment
 # paul janssen
 https://en.wikipedia.org/wiki/Paul_Janssen
 
+# substantia nigra
+https://en.wikipedia.org/wiki/Substantia_nigra
+
+# geweld
+https://nl.wikipedia.org/wiki/Geweld
+
+# stabiing
+https://en.wikipedia.org/wiki/Stabbing
+
+# syringe
+https://en.wikipedia.org/wiki/Syringe
+
+# nerve agent
+https://en.wikipedia.org/wiki/Nerve_agent
+
+# depot injection
+https://en.wikipedia.org/wiki/Depot_injection
+
 # metabolism
 https://en.wikipedia.org/wiki/Metabolism
 
