--- a/README
+++ b/README
@@ -18,7 +18,7 @@ https://en.wikipedia.org/wiki/Substantia_nigra
 # geweld
 https://nl.wikipedia.org/wiki/Geweld
 
-# stabiing
+# stabbing
 https://en.wikipedia.org/wiki/Stabbing
 
 # syringe
