--- a/README
+++ b/README
@@ -9,6 +9,9 @@ https://nl.wikipedia.org/wiki/Bouman_GGZ
 # psychiatrist
 https://en.wikipedia.org/wiki/Psychiatrist
 
+# torture chamber
+https://en.wikipedia.org/wiki/Torture_chamber
+
 # assortiment
 https://nl.wikipedia.org/wiki/Assortiment
 
