--- a/README
+++ b/README
@@ -63,4 +63,4 @@ https://en.wikipedia.org/wiki/Catatonia
 # prinsenland
 https://nl.wikipedia.org/wiki/Prinsenland
 
-doctor nekschot in action ® 2002-2022
+doctor nekschot in action
