--- a/README
+++ b/README
@@ -11,3 +11,6 @@ https://en.wikipedia.org/wiki/Cocaine_in_My_Brain
 
 # i want to break free
 https://en.wikipedia.org/wiki/I_Want_to_Break_Free
+
+# frederiks hollywood
+https://www.fredericks.com/collections/sale
