--- a/README
+++ b/README
@@ -14,3 +14,6 @@ https://en.wikipedia.org/wiki/I_Want_to_Break_Free
 
 # frederiks hollywood
 https://www.fredericks.com/collections/sale
+
+# santa claus
+https://nl.wikipedia.org/wiki/Santa_Claus_(beeld)
