--- a/README
+++ b/README
@@ -6,6 +6,9 @@
 # media park
 https://en.wikipedia.org/wiki/Media_Park_(Hilversum)
 
+# zo stoned aks een garnaal
+https://en.wiktionary.org/wiki/zo_stoned_als_een_garnaal
+
 # cocaine in my brain
 https://en.wikipedia.org/wiki/Cocaine_in_My_Brain
 
