--- a/README
+++ b/README
@@ -6,7 +6,7 @@
 # media park
 https://en.wikipedia.org/wiki/Media_Park_(Hilversum)
 
-# zo stoned aks een garnaal
+# zo stoned als een garnaal
 https://en.wiktionary.org/wiki/zo_stoned_als_een_garnaal
 
 # cocaine in my brain
