--- a/README
+++ b/README
@@ -17,8 +17,8 @@ https://en.wikipedia.org/wiki/Cocaine_in_My_Brain
 # i want to break free
 https://en.wikipedia.org/wiki/I_Want_to_Break_Free
 
+# group psychotherapy
+https://en.wikipedia.org/wiki/Group_psychotherapy
+
 # santa claus
 https://nl.wikipedia.org/wiki/Santa_Claus_(beeld)
-
-# jubileum
-https://nl.wikipedia.org/wiki/Jubileum
